<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.fragments.SignUpFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/weather"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_perm_identity"
        app:startIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:helperText="@string/at_least_8_characters_and_one_in_upper_case"
        app:startIconDrawable="@drawable/outline_lock"
        app:startIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createBtn"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/create_my_account"
        android:textSize="24sp" />

</LinearLayout>