<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.fragments.login_fragments.SignInFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/weather"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_perm_identity"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logInBtn"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/log_in"
        android:textSize="24sp" />

    <Button
        android:id="@+id/createBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/create_account"
        android:textSize="18sp" />

</LinearLayout>