<?xml version="1.0" encoding="utf-8"?><!-- Base view -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.ForecastFragment">

    <!-- Base weather view -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Main card weather -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <!-- City -->
                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="35sp"
                        tools:text="City" />

                    <!-- Current temp -->
                    <TextView
                        android:id="@+id/currentTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textSize="35sp"
                        tools:text="15" />

                    <!-- Weather text -->
                    <TextView
                        android:id="@+id/currentWeatherText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        tools:text="Weather text" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Twelve hours forecast -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/twelve_hours_forecast"
                        android:textSize="18sp" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/twelveForRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Five days forecast -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="2dp"
                        android:layout_weight="1"
                        android:text="@string/forecast_for_5_days"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fiveForRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="2dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- UV index and humidity -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <!-- UV-index -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:text="@string/uv_index"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/uvIndex"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <!-- Humidity -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="3"
                            android:gravity="center_vertical"
                            android:text="@string/humidity"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!-- Wind and visibility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Wind -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/wind"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />

                        <TextView
                            android:id="@+id/windUn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textSize="20sp"
                            tools:text="unit" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <!-- Visibility -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/visibility"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/visibility"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />

                        <TextView
                            android:id="@+id/visibilityUn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textSize="20sp"
                            tools:text="unit" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!-- Pressure and apparent -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Pressure -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/pressure"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />

                        <TextView
                            android:id="@+id/pressureUn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textSize="20sp"
                            tools:text="unit" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8" />

                <!-- Apparent -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/apparent"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/apparent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:textSize="35sp"
                            tools:text="0" />

                        <TextView
                            android:id="@+id/apparentUn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:textSize="20sp"
                            tools:text="unit" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <Button
                android:id="@+id/testButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>